--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ aiosqlite = "^0.19.0"
 faststream = "^0.3.8"
 aio-pika = "^9.3.1"
 pydantic-settings = "^2.1.0"
-
+requests = "^2.31.0"
+customtkinter = "^5.2.1"
+packaging = "^23.2"
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.24.0.post1"
@@ -28,3 +30,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 soundshouter = 'soundshouter.bin.soundshouter:main'
+gui = 'soundshouter.gui.shouterGUI:main'
