--- a/soundshouter/Cargo.toml
+++ b/soundshouter/Cargo.toml
@@ -11,11 +11,6 @@ eframe = { version = "0.27.2", features = ["default", "__screenshot"], optional 
 egui_extras = { version = "0.27.2", features = ["default", "image"], optional = true }
 ehttp = { version = "0.5.0", optional = true}
 
-env_logger = { version = "0.10", default-features = false, features = [
-    "auto-color",
-    "humantime",
-] }
-
 rocket = { version = "0.5.1", features = ["json"]}
 rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
 rumqttd = "0.19.0"
@@ -35,6 +30,7 @@ toml = "0.8.13"
 diesel_migrations = "2.2.0"
 # wird von der api verwendet
 serde_json = "1.0.133"
+log4rs = "1.3.0"
 
 [features]
 gui = ["dep:eframe", "dep:egui_extras", "dep:ehttp"]
